feat: hero added

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miguel Niver</title>
+  <!--Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
   <!--Custom CSS-->
   <link rel="stylesheet" href="./styles/main.scss">
   <!--Custom JS-->
   <script src="./scripts/main.js" defer></script>
 </head>
 <body>
-  <h1>Olá</h1>
-  <img src="./images/backgroundImageHero.png" alt="">
+  <header class="hero">
+    <div class="container">
+      <p class="hero__description">
+        Miguel está prestes a completar 7 anos e convida todos vocês para se juntarem a ele nesta jornada cheia de velocidade, cores e diversão!<br><br>
+        A aventura começa em <br>
+        <span id="contador">14d 4h 24m 30s</span>
+      </p>
+    </div>
+  </header>
 </body>
 </html>
