feat: infos_bar

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,21 @@
         Miguel está prestes a completar 7 anos e convida todos vocês para se juntarem a ele nesta jornada cheia de velocidade, cores e diversão!<br><br>
         A aventura começa em <br>
         <span id="contador">14d 4h 24m 30s</span>
+        <div class="infos-bar">
+          <ul class="infos-bar__infos">
+            <li class="infos-bar__infos__item">
+              <b>Localização</b>
+              Parque de diversões - Sintra
+            </li>
+            <li class="infos-bar__infos__item">
+              <b>Quando</b>
+              14 de Outubro de 2023 às 10:30 hs
+            </li>
+          </ul>
+          <a href="#" class="button button--primary">
+            Confirme sua presença
+          </a>
+        </div>
       </p>
     </div>
   </header>
