feat: story struture

--- a/src/index.html
+++ b/src/index.html
@@ -38,5 +38,16 @@
       </p>
     </div>
   </header>
+  <section class="story">
+    <div class="container">
+      <div class="story__details">
+        <h2 class="story__details__title">Aventura Veloz na Zona da Colina Verde</h2>
+        <p class="story__details__description">
+          Em um lugar mágico chamado "Zona da Colina Verde", Super Sonic e Sonic, o ouriço azul, corriam e pulavam rapidamente, como super-heróis. Eles estavam em uma missão emocionante para proteger seu mundo.
+        </p>
+      </div>
+      <img class="story__image" src="./images/Screenshot from 2023-10-07 21-04-34.png" alt="super sonic e sonic">
+    </div>
+  </section>
 </body>
 </html>
