feat: story section complete

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Miguel Niver</title>
+  <title>LuisMatos Niver</title>
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+  <!--AOS efects-->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!--Custom CSS-->
   <link rel="stylesheet" href="./styles/main.scss">
+  <!--AOS Efects JS-->
+  <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
   <!--Custom JS-->
   <script src="./scripts/main.js" defer></script>
 </head>
@@ -17,7 +21,7 @@
   <header class="hero">
     <div class="container">
       <p class="hero__description">
-        Miguel está prestes a completar 7 anos e convida todos vocês para se juntarem a ele nesta jornada cheia de velocidade, cores e diversão!<br><br>
+        Luiz Matos está prestes a completar 7 anos e convida todos vocês para se juntarem a ele nesta jornada cheia de velocidade, cores e diversão!<br><br>
         A aventura começa em <br>
         <span id="contador">14d 4h 24m 30s</span>
         <div class="infos-bar">
@@ -38,15 +42,45 @@
       </p>
     </div>
   </header>
-  <section class="story">
-    <div class="container">
+  <section class="story story--parte1">
+    <div class="container" data-aos="fade-right">
       <div class="story__details">
         <h2 class="story__details__title">Aventura Veloz na Zona da Colina Verde</h2>
         <p class="story__details__description">
-          Em um lugar mágico chamado "Zona da Colina Verde", Super Sonic e Sonic, o ouriço azul, corriam e pulavam rapidamente, como super-heróis. Eles estavam em uma missão emocionante para proteger seu mundo.
+          Em um lugar mágico chamado "Zona da Colina Verde", Luiz Matos e Sonic, o ouriço azul, corriam e pulavam rapidamente, como super-heróis. Eles estavam em uma missão emocionante para proteger seu mundo.
         </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-04-34.png" alt="super sonic e sonic">
+    </div>
+  </section>
+  <section class="story story--parte2 story--image-left">
+    <div class="container" data-aos="fade-left">
+      <div class="story__details">
+        <h2 class="story__details__title">Luiz Matos e Seu Poder Incrível</h2>
+        <p class="story__details__description">
+          Luiz Matos estava animado e pronto para começar uma aventura incrível! Ele brilhava como uma luz azul mágica, e junto com Sonic, estavam determinados a salvar seu mundo de qualquer perigo.        </p>
+      </div>
+      <img class="story__image" src="./images/Screenshot from 2023-10-07 21-14-35.png" alt="super sonic e sonic">
+    </div>
+  </section>
+  <section class="story story--parte3">
+    <div class="container" data-aos="fade-right">
+      <div class="story__details">
+        <h2 class="story__details__title">A Diversão em um Carrinho Especial</h2>
+        <p class="story__details__description">
+          Os dois amigos entraram em um carrinho de montanha-russa incrível e se divertiram muito! Subiram e desceram em pistas emocionantes enquanto o vento fazia seus espinhos balançarem.        </p>
+      </div>
+      <img class="story__image" src="./images/Screenshot from 2023-10-07 21-15-40.png" alt="super sonic e sonic">
+    </div>
+  </section>
+  <section class="story story--parte4 story--image-left">
+    <div class="container" data-aos="fade-left">
+      <div class="story__details">
+        <h2 class="story__details__title">Protegendo as Esmeraldas Especiais</h2>
+        <p class="story__details__description">
+          Outros amigos, nossos convidados, estavam cuidando das preciosas "Esmeraldas". Eles eram são um time de super-heróis, garantindo que essas pedras mágicas fossem mantidas em segurança, protegendo o mundo de qualquer vilão. Todos trabalhavam juntos para fazer o bem e manter seu mundo a salvo!        </p>
+      </div>
+      <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
     </div>
   </section>
 </body>
