--- a/src/index.html
+++ b/src/index.html
@@ -22,17 +22,17 @@
     <div class="container">
       <p class="hero__description">
         Luiz Matos está prestes a completar 7 anos e convida todos vocês para se juntarem a ele nesta jornada cheia de velocidade, cores e diversão!<br><br>
-        A aventura começa em <br>
-        <span id="contador">14d 4h 24m 30s</span>
+        A aventura
+        <span id="contador"></span>
         <div class="infos-bar">
           <ul class="infos-bar__infos">
             <li class="infos-bar__infos__item">
               <b>Localização</b>
-              Parque de diversões - Sintra
+              Lugar de S. Carlos, Zona Industrial | 2725-473 Mem Martins | Pavilhão InFoot | telf. 212841912
             </li>
             <li class="infos-bar__infos__item">
               <b>Quando</b>
-              14 de Outubro de 2023 às 10:30 hs
+              14 de Outubro de 2023 entre às 8h45 e as 12h30 no InFoot
             </li>
           </ul>
           <a href="#" class="button button--primary">
@@ -78,7 +78,8 @@
       <div class="story__details">
         <h2 class="story__details__title">Protegendo as Esmeraldas Especiais</h2>
         <p class="story__details__description">
-          Outros amigos, nossos convidados, estavam cuidando das preciosas "Esmeraldas". Eles eram são um time de super-heróis, garantindo que essas pedras mágicas fossem mantidas em segurança, protegendo o mundo de qualquer vilão. Todos trabalhavam juntos para fazer o bem e manter seu mundo a salvo!        </p>
+          Nossos amigos cuidavam das "Esmeraldas" como heróis, protegendo o mundo. Eles também se divertiam no parque de diversões com insufláveis, trenós, escorregas, laser tag e piscinas de bolas. Era uma aventura divertida e segura para todos!
+        </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
     </div>
