--- a/src/index.html
+++ b/src/index.html
@@ -48,19 +48,19 @@
               <div class="modal-content confirm">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5" id="confirmacaoLabel">Confirmação</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" id="openModal" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <form>
-                    <div class="mb-3">
-                      <label for="recipient-name" class="col-form-label">Nome do convidado:</label>
-                      <input type="text" class="form-control" id="recipient-name">
+                    <div class="mb-3" id="guestForm">
+                      <label for="guest-name" class="col-form-label">Nome do convidado:</label>
+                      <input type="text" class="form-control" id="guest-name" required>
                     </div>
                   </form>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                  <button type="button" class="btn btn-primary">Confirmar</button>
+                  <button type="submit" class="btn btn-primary">Confirmar</button>
                 </div>
               </div>
             </div>
