fix: confirmação whats web

--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
                   <button type="button" id="openModal" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <form>
-                    <div class="mb-3" id="guestForm">
+                  <form id="guestForm">
+                    <div class="mb-3">
                       <label for="guest-name" class="col-form-label">Nome do convidado:</label>
                       <input type="text" class="form-control" id="guest-name" required>
                     </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                  <button type="submit" class="btn btn-primary">Confirmar</button>
+                  <button type="submit" id="btnEnviar" class="btn btn-primary">Confirmar</button>
                 </div>
               </div>
             </div>
