fix: modal position and button

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           </button>
           <!--Modal-->
           <div class="modal fade" id="confirmacao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="confirmacaoLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content confirm">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5" id="confirmacaoLabel">Confirmação</h1>
@@ -111,5 +111,12 @@
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
     </div>
   </section>
+  <footer>
+    <div class="container">
+      <p class="footer__description">
+        Obrigado por se juntar a nós nesta aventura! Esperamos que você se divirta muito e que goste de comemorar o aniversário de Luiz Matos com ele. Até a logo!
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
