fix: images desktop size and feat: footer

--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,9 @@
   <section class="story story--parte1">
     <div class="container" data-aos="fade-right">
       <div class="story__details">
-        <h2 class="story__details__title">Aventura Veloz na Zona da Colina Verde</h2>
+        <h2 class="story__details__title">Luiz Matos e Sonic, os Heróis Velozes</h2>
         <p class="story__details__description">
-          Em um lugar mágico chamado "Zona da Colina Verde", Luiz Matos e Sonic, o ouriço azul, corriam e pulavam rapidamente, como super-heróis. Eles estavam em uma missão emocionante para proteger seu mundo.
+          Em um lugar mágico chamado "Zona da Colina Verde", Luiz Matos e seu amigo Sonic, eram como super-heróis. Eles corriam e pulavam para proteger seu mundo emocionante.
         </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-04-34.png" alt="super sonic e sonic">
@@ -83,9 +83,10 @@
   <section class="story story--parte2 story--image-left">
     <div class="container" data-aos="fade-left">
       <div class="story__details">
-        <h2 class="story__details__title">Luiz Matos e Seu Poder Incrível</h2>
+        <h2 class="story__details__title">Luiz Matos com Poderes Incríveis</h2>
         <p class="story__details__description">
-          Luiz Matos estava animado e pronto para começar uma aventura incrível! Ele brilhava como uma luz azul mágica, e junto com Sonic, estavam determinados a salvar seu mundo de qualquer perigo.        </p>
+          Luiz Matos estava animado e pronto para começar uma aventura incrível! Ele brilhava como uma luz amarela mágica, e junto com Sonic, estavam determinados a salvar seu mundo de qualquer perigo.  
+        </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-14-35.png" alt="super sonic e sonic">
     </div>
@@ -95,7 +96,7 @@
       <div class="story__details">
         <h2 class="story__details__title">A Diversão em um Carrinho Especial</h2>
         <p class="story__details__description">
-          Os dois amigos entraram em um carrinho de montanha-russa incrível e se divertiram muito! Subiram e desceram em pistas emocionantes enquanto o vento fazia seus espinhos balançarem.        </p>
+          Os dois amigos entraram em um carrinho de montanha-russa incrível e se divertiram muito! Subiram e desceram em pistas emocionantes enquanto o vento fazia seus espinhos balançarem.</p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-15-40.png" alt="super sonic e sonic">
     </div>
@@ -105,17 +106,17 @@
       <div class="story__details">
         <h2 class="story__details__title">Protegendo as Esmeraldas Especiais</h2>
         <p class="story__details__description">
-          Nossos amigos cuidavam das "Esmeraldas" como heróis, protegendo o mundo. Eles também se divertiam no parque de diversões com insufláveis, trenós, escorregas, laser tag e piscinas de bolas. Era uma aventura divertida e segura para todos!
+          Luiz Matos, Sonic e seus amigos eram como guardiões especiais, protegendo coisas valiosas. Depois, todos vocês, crianças convidadas, foram se divertir em brinquedos infláveis, trenós, escorregas, laser tag e piscinas de bolinhas. Foi uma aventura muito divertida e segura para todos!
         </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
     </div>
   </section>
   <footer>
-    <div class="container">
-      <p class="footer__description">
-        Obrigado por se juntar a nós nesta aventura! Esperamos que você se divirta muito e que goste de comemorar o aniversário de Luiz Matos com ele. Até a logo!
-      </p>
+    <div class="footer container">
+      <div class="footer__description">
+        <p>&copy; 2023 Claudio Ferreira</p>
+      </div>
     </div>
   </footer>
 </body>
