fix: button and text story content

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
       <div class="story__details">
         <h2 class="story__details__title">Protegendo as Esmeraldas Especiais</h2>
         <p class="story__details__description">
-          Luiz Matos, Sonic e seus amigos eram como guardiões especiais, protegendo coisas valiosas. Depois, todos vocês, crianças convidadas, foram se divertir em brinquedos infláveis, trenós, escorregas, laser tag e piscinas de bolinhas. Foi uma aventura muito divertida e segura para todos!
+          Todos os amigos eram como guardiões especiais, protegendo coisas valiosas. Depois, todos vão se divertir em brinquedos infláveis, trenós, escorregas, laser tag e piscinas de bolinhas. 
         </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
