chore: story text updated

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
       <div class="story__details">
         <h2 class="story__details__title">A Diversão em um Carrinho Especial</h2>
         <p class="story__details__description">
-          Os dois amigos entraram em um carrinho de montanha-russa incrível e se divertiram muito! Subiram e desceram em pistas emocionantes enquanto o vento fazia seus espinhos balançarem.</p>
+          Os dois amigos entraram em um carrinho incrível para encontrar os seus amigos. Subiram e desceram em lugares emocionantes enquanto o vento fazia seus espinhos balançarem.</p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-15-40.png" alt="super sonic e sonic">
     </div>
@@ -106,7 +106,7 @@
       <div class="story__details">
         <h2 class="story__details__title">Protegendo as Esmeraldas Especiais</h2>
         <p class="story__details__description">
-          Todos os amigos eram como guardiões especiais, protegendo coisas valiosas. Depois, todos vão se divertir em brinquedos infláveis, trenós, escorregas, laser tag e piscinas de bolinhas. 
+          Todos os amigos eram como guardiões especiais, protegendo coisas valiosas. Logo eles irão se encontrar para se divertir em brinquedos infláveis, trenós, escorregas, laser tag e piscinas de bolinhas para festejar o anivérsario de Luiz Matos. 
         </p>
       </div>
       <img class="story__image" src="./images/Screenshot from 2023-10-07 21-26-24.png" alt="super sonic e sonic">
